envoy/oauth2-oidc/envoy.yaml
node:
  cluster: test-cluster
  id: test-id

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          accessLog:
          - name: envoy.access_loggers.file
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              log_format:
                text_format_source:
                  inline_string: "[%START_TIME%] %REQ(x-teg-oidcauthentication)% %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %REQ(X-FORWARDED-FOR)% %REQ(USER-AGENT)% %REQ(X-REQUEST-ID)% %REQ(:AUTHORITY)% %UPSTREAM_HOST%\n"
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                typed_per_filter_config:
                  envoy.filters.http.csrf:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.csrf.v3.CsrfPolicy
                    filter_enabled:
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: google_oauth2
                  uri: https://oauth2.googleapis.com/token
                  timeout: 3s
                authorization_endpoint: https://accounts.google.com/o/oauth2/v2/auth
                redirect_uri: "https://localhost:8443/productpage/oauth/callback"
                redirect_path_matcher:
                  path:
                    exact: /productpage/oauth/callback
                signout_path:
                  path:
                    exact: /signout
                forward_bearer_token: true
                credentials:
                  client_id: 250344188863-lddmgbasbdom9qpt1mr0rkln62281s6d.apps.googleusercontent.com
                  token_secret:
                    name: client_secret
                    sds_config:
                      path_config_source:
                        path: "/etc/client-secret.yaml"
                  hmac_secret:
                    name: hmac
                    sds_config:
                      path_config_source:
                        path: "/etc/hmac-secret.yaml"
                  cookie_names:
                    bearer_token: "EnvoyOauthBearerToken"
                    oauth_hmac: "EnvoyOauthHMAC"
                    oauth_expires: "EnvoyOauthExpires"
                    id_token: "EnvoyOauthIdToken"
                    refresh_token: "EnvoyOauthRefreshToken"
                # (Optional): defaults to 'user' scope if not provided
                auth_scopes:
                - openid
                - email
                auth_type: BASIC_AUTH
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIIEpDCCAowCCQDoXo45dTDtKTANBgkqhkiG9w0BAQsFADAUMRIwEAYDVQQDDAls
[...]
                    1JRduLgakkvT3/3b1DiF3VaudEG4bihSj7ZhN/rVp0s8z2rKse7xKA==
                    -----END CERTIFICATE-----
              private_key:
                inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQC6ebzqeVyF7KOY
[...]
                    iH6ELWrUQ7GrW2B89isKVGEPR92qdIo=
                    -----END PRIVATE KEY-----
  clusters:
  - name: local_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend
                port_value: 8080
  - name: google_oauth2
    connect_timeout: 20s
    type: LOGICAL_DNS
    lb_policy: round_robin
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: google_oauth2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: oauth2.googleapis.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: oauth2.googleapis.com
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
